refactor mobile code from pocketbase
